--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body{
 	height: 500px;
 	background: url("../img/header.jpg") no-repeat center;
 	background-size: cover;
+
+	text-align: center;
 }
 
 .zakaz{
